# lance-bench

./: .gitignore  PLAN.md  README.md  pyproject.toml
doc/: README.md  disk-and-memory.md  first-benchmark.md  reading-data.md  sweep-and-report.md  visualizations.md
doc/reports/: benchmark-report.md
src/lance_bench/: __init__.py  benchmark.py  bruteforce.py  cli.py  dataset.py  lance_backend.py  parquet_backend.py  plot_sweep.py  report_md.py  resource_profile.py  sweep.py
