[project]
name = "lance-bench"
version = "0.1.0"
description = "Parquet vs Lance (pylance) first benchmark harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pylance>=3.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pyarrow>=15.0.0",
    "typer>=0.12.0",
]

[project.scripts]
lance-bench = "lance_bench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lance_bench"]
